--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "test:debug:cli": "yarn clean && yarn build && NODE_ENV=dev && node --inspect-brk dist/adapter.js",
     "clean": "rm -rf dist",
     "test": "ts-jest",
-    "module:publish": "yarn clean && yarn build && yarn publish --access=public",
-    "adapter:adapter-netlify-edge:build": "yarn build && cd adapters/adapter-netlify-edge && yarn build",
-    "adapter:adapter-netlify-edge:generate": "yarn build && npx @basuapi/adapter-netlify-edge generate",
-    "adapter:adapter-netlify-edge:start": "cd adapters/adapter-netlify-edge && yarn build && node api/index.js",
-    "adapter:adapter-netlify-edge:start:debug": "cd adapters/adapter-netlify-edge && yarn build && node --inspect-brk api/index.js"
+    "module:publish": "yarn clean && yarn build && yarn publish --access=public"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.218",
     "@types/commander": "^2.12.2",
@@ -36,12 +34,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@basuapi/adapter": "^1.0.26",
+    "@basuapi/adapter": "^1.0.28",
     "@basuapi/api": "^1.0.59",
     "commander": "^9.4.0",
     "nunjucks": "^3.2.3",
     "recursive-copy": "^2.0.14",
-    "regenerator-runtime": "^0.13.9",
-    "rollup": "^2.77.2"
+    "regenerator-runtime": "^0.13.9"
   }
 }
